[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://TileMap.gd" type="Script" id=2]
[ext_resource path="res://Lollipop.tscn" type="PackedScene" id=3]
[ext_resource path="res://Table.tscn" type="PackedScene" id=4]
[ext_resource path="res://Snake.gd" type="Script" id=5]
[ext_resource path="res://SnakeBody.tscn" type="PackedScene" id=6]
[ext_resource path="res://SeedEdit.gd" type="Script" id=7]

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 2 )
_sections_unfolded = [ "Cell", "Transform" ]
food = ExtResource( 3 )
table = ExtResource( 4 )

[node name="Snake" type="Node2D" parent="TileMap" index="0"]

position = Vector2( -1, -1 )
script = ExtResource( 5 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]
body = ExtResource( 6 )

[node name="head" parent="TileMap/Snake" index="0" instance=ExtResource( 6 )]

position = Vector2( 352, 288 )

[node name="tail" parent="TileMap/Snake" index="1" instance=ExtResource( 6 )]

position = Vector2( 288, 288 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="TurnTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="LoseGame" type="Label" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 96.0
margin_top = 288.0
margin_right = 187.0
margin_bottom = 302.0
rect_scale = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "PRZEGRANKO"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="Points" type="Label" parent="." index="3"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 736.0
margin_top = 32.0
margin_right = 774.0
margin_bottom = 63.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Rage" type="ProgressBar" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 352.0
margin_top = 32.0
margin_right = 608.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 50.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Anchor", "Material", "Visibility" ]

[node name="SeedEdit" type="LineEdit" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 96.0
margin_right = 185.0
margin_bottom = 120.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
script = ExtResource( 7 )
_sections_unfolded = [ "Caret", "Placeholder", "Rect" ]

[node name="GoButton" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 800.0
margin_top = 96.0
margin_right = 833.0
margin_bottom = 116.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "GO"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]

[connection signal="timeout" from="TurnTimer" to="TileMap" method="_on_TurnTimer_timeout"]

[connection signal="pressed" from="GoButton" to="." method="_on_GoButton_pressed"]


